<resources>
    <string name="abbreviation_minutes">Min.</string>
    <string name="abbreviation_seconds">Sek.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acceptance_of_the_regulations">Akceptacja regulaminu</string>
    <string name="account_active">aktywne</string>
    <string name="account_inactive">nieaktywne</string>
    <string name="account_status_2">Stan konta:</string>
    <string name="active">aktywny</string>
    <string name="add">dodaj</string>
    <string name="add_next_card">DODAJ KOLEJNĄ KARTĘ</string>
    <string name="additionally">dodatkowo:</string>
    <string name="address_hint">Ulica</string>
    <string name="amount_of_reserved_bikes">Zarezerwowanych rowerów: %1$s</string>
    <string name="app_name">Mevo</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="battery_smartbike">bateria:</string>
    <string name="bike_book_time">rezerwacja wygaśnie za: %1$s</string>
    <string name="bike_cannot_be_returned_trough_app">Ten rower obecnie nie może być zwrócony przez aplikację</string>
    <string name="bike_not_availaible_for_rent">Rower nie jest dostępny</string>
    <string name="bike_number">Numer roweru</string>
    <string name="bike_parking_fail">Parkowanie roweru numer %1$s nie powiodło się!</string>
    <string name="bike_parking_success">Rower numer %1$s został zaparkowany!</string>
    <string name="bike_rent_resume_fail">Wznowienie wypożyczenia roweru numer %1$s nie powiodło się!</string>
    <string name="bike_rent_resume_success">Wypożyczenie roweru numer %1$s zostało wznowione!</string>
    <string name="bike_rent_time">czas: %1$s</string>
    <string name="bike_rent_time_cost">czas: %1$s, koszt: %2$s</string>
    <string name="bike_rental">wypożyczenie:</string>
    <string name="bike_reservation_cancel_fail">Anulowanie rezerwacji roweru nie powiodło się!</string>
    <string name="bike_reservation_cancel_success">Rezerwacja roweru została anulowana!</string>
    <string name="bike_reservation_confimation_question">Czy chcesz zarezerwować rower?</string>
    <string name="bike_return">zwrot:</string>
    <string name="bike_type_electric">Smartbike</string>
    <string name="bike_type_kids_4">Rower dziecięcy 4+</string>
    <string name="bike_type_kids_6">Rower dziecięcy 6+</string>
    <string name="bike_type_standard">Rower standardowy</string>
    <string name="bike_type_tandem">Tandem</string>
    <string name="bikes_num">rowerów</string>
    <string name="bikes_number">Ilość rowerów:</string>
    <string name="bikes_stations">Rowery na stacji %1$s</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Anuluj</string>
    <string name="card_added">Karta została dodana.</string>
    <string name="card_number">Numer karty</string>
    <string name="card_number_colon">Numer karty:</string>
    <string name="chain">Łańcuch</string>
    <string name="channel_description">default channel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_all_terms">Zaznacz wszystkie wymagane zgody</string>
    <string name="check_box_error">Zaznacz przynajmniej 1 element</string>
    <string name="city_error">Podaj nazwę miasta</string>
    <string name="city_hint">Miasto</string>
    <string name="close">Zamknij</string>
    <string name="code">Kod:</string>
    <string name="code_block">kod blokady:</string>
    <string name="com.crashlytics.android.build_id">174ccf52-17e7-4d81-a4af-716eec527cd6</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirmation_of_the_telephone_number">Potwierdzenie numeru telefonu</string>
    <string name="contact_center">Biuro Obsługi Klienta</string>
    <string name="contact_complaint_appeal">Złóż odwołanie od reklamacji</string>
    <string name="contact_complaints">Reklamacje i zapytania</string>
    <string name="contact_cost_disclaimer">(koszt połączenia zgodny z taryfami operatorów)</string>
    <string name="contact_email_address">bok@rowermevo.pl</string>
    <string name="contact_email_complaint_appeal">bok@rowermevo.pl</string>
    <string name="contact_email_label">email: %1$s</string>
    <string name="contact_hours">Czynne całodobowo</string>
    <string name="contact_hours_2">Czynne całodobowo 24/7 \npoza sezonem pn-pt: 10:00 \n- 12:00</string>
    <string name="contact_phone">tel.: %1$s</string>
    <string name="contact_phone_number">+48 58 350 20 20</string>
    <string name="country_error">Podaj kraj</string>
    <string name="country_hint">Kraj</string>
    <string name="credit_card">Karta kredytowa</string>
    <string name="default_notification_channel_id">default</string>
    <string name="default_web_client_id">512108198210-tk55dccerm1kg7jjhu83n0anum5oqlq9.apps.googleusercontent.com</string>
    <string name="details">Szczegóły</string>
    <string name="dialog_bike_reserved_correctly">Rower został zarezerwowany na 15 minut!</string>
    <string name="dialog_close">Zamknij</string>
    <string name="dialog_fill_details_header">Uwaga</string>
    <string name="dialog_fill_details_message">Proszę uzupełnij swoje dane użytkownika.</string>
    <string name="dialog_return_bike_returned_info">Rower numer %1$s został zwrócony!</string>
    <string name="dialog_return_report_problem">Zgłoś awarię</string>
    <string name="dialog_return_show_rent_details">Pokaż szczegóły</string>
    <string name="enter_pin_code">Wpisz kod otrzymany w wiadomości SMS</string>
    <string name="enter_voucher_code">Wpisz kod vouchera aby go aktywować</string>
    <string name="fill_this_fields">* - pola wymagane</string>
    <string name="frag_proximity_1">Przyłóż kartę do czytnika RFID w rowerze</string>
    <string name="frag_proximity_2">Czytnik znajduje się pod kodem QR - wystarczy że przyłożysz kartę w miejscu gdzie jest kod QR i odczekasz kilka sekund.</string>
    <string name="frag_proximity_card_header">Karta zbliżeniowa</string>
    <string name="frag_proximity_card_header_step_two">Dodawanie karty zbliżeniowej</string>
    <string name="fragment_login_register">Załóż konto</string>
    <string name="generate_new_pin">Wygeneruj kod PIN</string>
    <string name="hce_scanning_in_progress">Trwa skanowanie karty…</string>
    <string name="keep_going">Przejdź dalej</string>
    <string name="or_type_card">Lub wpisz numer ręcznie</string>
    <string name="phone_number_hint">Numer telefonu</string>
    <string name="pin_code">Kod PIN</string>
    <string name="recover_pin_text">Proszę wprowadzić tutaj swój numer telefonu komórkowego. Wkrótce wyślemy wiadomość SMS z nowym PINem.</string>
    <string name="register">Rejestracja</string>
    <string name="register_accept_regulamin">Pobierz regulamin</string>
    <string name="register_agreements_info">Powyższe zgody można wycofać w każdym czasie. Sposób wycofania zgody wskazany jest w Polityce Prywatności NB TRICITY Sp. z o.o. Wycofanie zgody nie będzie wpływać na zgodność z prawem przetwarzania dokonanego przed jej wycofaniem.</string>
    <string name="register_info_closures">Klauzule informacyjne</string>
    <string name="remove">usuń</string>
    <string name="rent_bike_rent_tooltip">Wpisz numer roweru widoczny nad kodem QR</string>
    <string name="rent_bike_scanner">Wypożycz rower</string>
    <string name="reserve_bike">Rezerwuj</string>
    <string name="scan_card">uzyj czytnika rfid w rowerze</string>
    <string name="step_2">krok 2 z 3</string>
    <string name="step_3">krok 3 z 3</string>
    <string name="to_add_card">Możesz również dodać kartę skanując ją czytnikiem RFID umieszcoznym w rowerze. Wypożycz rower i rozpocznij proces skanowania naciskając przycisk poniżej:</string>
    <string name="use_voucher">Wykorzystaj Voucher</string>
    <string name="view_rent_bike_scan_help_header">Masz problem ze skanowaniem?</string>
    <string name="voucher_hint">Kod</string>
    <string name="voucher_text">Voucher</string>
</resources>