<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/white" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_30" android:layout_marginRight="@dimen/margin_30" android:layout_marginStart="@dimen/margin_30" android:layout_marginEnd="@dimen/margin_30">
        <TextView android:textColor="@color/colorAccent" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36dp" android:text="@string/register" style="@style/text_registration_title"/>
        <TextView android:textSize="12sp" android:textColor="@color/colorAccent" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/step_2"/>
        <TextView android:textSize="16sp" android:textColor="@color/colorAccent" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/acceptance_of_the_regulations"/>
        <android.support.v7.widget.AppCompatButton android:id="@+id/fragment_register_step_two_download_button" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginTop="24dp" android:text="@string/register_accept_regulamin" style="@style/buttonWhite"/>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp">
            <android.support.v7.widget.RecyclerView android:id="@+id/fragment_register_step_2_recycler" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </RelativeLayout>
        <android.support.v7.widget.AppCompatButton android:id="@+id/fragment_register_step_clausules" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginTop="24dp" android:text="@string/register_info_closures" style="@style/buttonWhite"/>
        <android.support.v7.widget.AppCompatButton android:id="@+id/fragment_register_step_two_keep_going_button" android:layout_width="match_parent" android:layout_height="@dimen/button_height" android:layout_marginTop="12dp" android:layout_marginBottom="25dp" android:text="@string/keep_going" style="@style/buttonBlue"/>
        <TextView android:textSize="12sp" android:textColor="@color/hintTextColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/fill_this_fields"/>
        <TextView android:textSize="12sp" android:textColor="@color/colorAccent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/register_agreements_info"/>
    </LinearLayout>
</ScrollView>
