<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="36dp" android:text="@string/frag_proximity_card_header_step_two" style="@style/text_registration_title"/>
    <TextView android:textColor="@color/colorAccent" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_standard" android:text="@string/frag_proximity_1"/>
    <TextView android:textColor="@color/textGreyDark" android:padding="@dimen/space_large" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/frag_proximity_2"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18sp" android:textColor="@color/textGreyDark" android:id="@+id/dialog_info_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hce_scanning_in_progress" android:fontFamily="@font/roboto_regular" android:paddingStart="@dimen/space_large"/>
        <TextView android:textSize="18sp" android:textColor="@color/textBasic2" android:gravity="left" android:id="@+id/add_proximity_card_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="32dp" android:textAlignment="gravity"/>
    </LinearLayout>
</LinearLayout>
