<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/standard_padding" android:paddingRight="@dimen/standard_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="36dp" android:layout_marginBottom="36dp" android:text="@string/frag_proximity_card_header" style="@style/text_registration_title"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/card_number_colon" android:textAlignment="center" style="@style/text_no_items"/>
        <TextView android:id="@+id/card_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:textAlignment="center" style="@style/text_no_items"/>
        <ImageView android:id="@+id/card_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:src="@drawable/city_card_graph_2" android:adjustViewBounds="true"/>
        <Button android:id="@+id/remove_card_button" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/button_height" android:layout_marginTop="24dp" android:text="@string/remove" style="@style/buttonRed"/>
        <Button android:id="@+id/add_card_button" android:layout_width="match_parent" android:layout_height="@dimen/button_height" android:layout_marginTop="24dp" android:text="@string/add_next_card" style="@style/buttonBlue"/>
    </LinearLayout>
</ScrollView>
