<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content">
    <me.grantland.widget.AutofitTextView android:textStyle="bold" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/view_basic_header_header_text" android:background="@drawable/card_top_rounded_corners" android:paddingLeft="12dp" android:paddingRight="12dp" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/view_rent_bike_scan_help_header" android:maxLines="1"/>
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:padding="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.mevo.app.presentation.custom_views.CustomInput android:id="@+id/view_rent_bike_bike_number_input" android:layout_width="match_parent" android:layout_height="wrap_content" app:customInput_background="@drawable/edit_text_bg_grey" app:customInput_showErrorMessage="false">
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/TextInputLayoutBasic">
                <android.support.design.widget.TextInputEditText android:textColor="@color/textInput" android:id="@+id/view_rent_bike_bike_number_edit" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/bike_number" android:maxLines="1" android:inputType="number" android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>
        </com.mevo.app.presentation.custom_views.CustomInput>
        <TextView android:textSize="11sp" android:textColor="@color/lightHintColor" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:text="@string/rent_bike_rent_tooltip"/>
        <android.support.v7.widget.AppCompatButton android:id="@+id/view_rent_bike_rent_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="12dp" android:text="@string/rent_bike_scanner" style="@style/buttonBlue"/>
    </LinearLayout>
</LinearLayout>
