<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginStart="30dp" android:layout_marginEnd="30dp">
        <TextView android:textSize="24sp" android:textColor="@color/colorAccent" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36dp" android:text="@string/pin_code" style="@style/text_registration_title"/>
        <TextView android:textSize="16sp" android:textColor="@color/colorAccent" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/recover_pin_text"/>
        <com.mevo.app.presentation.custom_views.CustomInput android:id="@+id/fragment_login_mobile_number_edit_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40dp" app:customInput_background="@drawable/edit_text_bg_grey">
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/TextInputLayoutBasic">
                <android.support.design.widget.TextInputEditText android:textColor="@color/textInput" android:id="@+id/fragment_recover_pin_edit_text_pin" android:background="@drawable/custom_input_valid_edit_text_bg" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/phone_number_hint" android:maxLines="1" android:inputType="number" android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>
        </com.mevo.app.presentation.custom_views.CustomInput>
        <android.support.v7.widget.AppCompatButton android:id="@+id/fragment_recover_pin_generate_pin_button" android:visibility="visible" android:layout_width="match_parent" android:layout_height="@dimen/button_height" android:layout_marginTop="@dimen/dialog_padding" android:text="@string/generate_new_pin" style="@style/buttonBlue"/>
    </LinearLayout>
    <com.mevo.app.presentation.custom_views.ProgressOverlayView android:id="@+id/fragment_recover_pin_progress_view" android:layout_width="match_parent" android:layout_height="match_parent"/>
</LinearLayout>
